--- a/package.json
+++ b/package.json
@@ -5,8 +5,32 @@
   "license": "MIT",
   "repository": "pomber/didact",
   "author": "pomber",
-  "main": "didact.js",
+  "scripts": {
+    "start": "webpack-dev-server --open",
+    "lint:fix": "npx eslint \"src/**\" --fix",
+    "build": "webpack"
+  },
   "keywords": [
     "react"
-  ]
+  ],
+  "devDependencies": {
+    "@babel/preset-react": "^7.16.0",
+    "babel-loader": "^8.2.3",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.2.6",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.6.0"
+  },
+  "dependencies": {
+    "@types/react": "^17.0.38"
+  }
 }
